; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5755.c_ad5755_write_raw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5755.c_ad5755_write_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i32 }
%struct.ad5755_state = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32, i32, i64)* @ad5755_write_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad5755_write_raw(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.iio_dev*, align 8
  %8 = alloca %struct.iio_chan_spec*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.ad5755_state*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.iio_dev* %0, %struct.iio_dev** %7, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %17 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %18 = call %struct.ad5755_state* @iio_priv(%struct.iio_dev* %17)
  store %struct.ad5755_state* %18, %struct.ad5755_state** %12, align 8
  %19 = load %struct.ad5755_state*, %struct.ad5755_state** %12, align 8
  %20 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %21 = load i64, i64* %11, align 8
  %22 = call i32 @ad5755_chan_reg_info(%struct.ad5755_state* %19, %struct.iio_chan_spec* %20, i64 %21, i32 1, i32* %14, i32* %13, i32* %15)
  store i32 %22, i32* %16, align 4
  %23 = load i32, i32* %16, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %5
  %26 = load i32, i32* %16, align 4
  store i32 %26, i32* %6, align 4
  br label %47

27:                                               ; preds = %5
  %28 = load i32, i32* %13, align 4
  %29 = load i32, i32* %9, align 4
  %30 = shl i32 %29, %28
  store i32 %30, i32* %9, align 4
  %31 = load i32, i32* %15, align 4
  %32 = load i32, i32* %9, align 4
  %33 = add i32 %32, %31
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %9, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %39, label %36

36:                                               ; preds = %27
  %37 = load i32, i32* %9, align 4
  %38 = icmp sgt i32 %37, 65535
  br i1 %38, label %39, label %42

39:                                               ; preds = %36, %27
  %40 = load i32, i32* @EINVAL, align 4
  %41 = sub nsw i32 0, %40
  store i32 %41, i32* %6, align 4
  br label %47

42:                                               ; preds = %36
  %43 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %44 = load i32, i32* %14, align 4
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @ad5755_write(%struct.iio_dev* %43, i32 %44, i32 %45)
  store i32 %46, i32* %6, align 4
  br label %47

47:                                               ; preds = %42, %39, %25
  %48 = load i32, i32* %6, align 4
  ret i32 %48
}

declare dso_local %struct.ad5755_state* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @ad5755_chan_reg_info(%struct.ad5755_state*, %struct.iio_chan_spec*, i64, i32, i32*, i32*, i32*) #1

declare dso_local i32 @ad5755_write(%struct.iio_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
